--- a/sass/1_mobile/_2vertu.scss
+++ b/sass/1_mobile/_2vertu.scss
@@ -6,4 +6,9 @@
     width: 70px;
     height: 70px;
   }
+  // .icon-place{
+    // display: flex;
+    // margin: 25px auto;
+    // padding: 25px auto;
+  // }
 }
