--- a/sass/3_desktop/_5clients.scss
+++ b/sass/3_desktop/_5clients.scss
@@ -13,6 +13,7 @@
       display: flex;
       justify-content: space-between;
       list-style: none;
+      outline: 1px solid black;
     }
   }
   .client-icon {
@@ -21,12 +22,15 @@
     fill: currentColor;
   }
   .clients-item {
+    margin: var(--mci);
     width: calc((100% - 2 * 6 * var(--mci)) / 6);
   }
   .client-link {
     display: inline-block;
     width: 170px;
     height: 90px;
+
+    // border: 1px solid var(--accent-color);
     border: 1px solid #afb1b8;
     border-radius: 4px;
     text-align: center;
@@ -39,6 +43,7 @@
     &:focus {
       border: 1px solid var(--accent-color);
       color: var(--accent-color);
+      // fill: var(--accent-color);
       outline: none;
     }
   }
