--- a/sass/3_desktop/_bp_1200.scss
+++ b/sass/3_desktop/_bp_1200.scss
@@ -4,21 +4,18 @@
 
 @import "./menu";
 
+
+
+
 @import "./0header";
 @import "./1hero";
-// @import "./2vertu";
-// @import "./3directions";
-// @import "./4team";
-// @import "./5clients";
-// @import "./footer";
+@import "./2vertu";
+@import "./3directions";
+@import "./4team";
+@import "./5clients";
+@import "./footer";
 
-// @import "./backdrop_modal";
-// @import "./form";
-// @import "./portfolio";
+@import "./backdrop_modal";
+@import "./form";
 
-
-
-
-// @import "./variables";
-// @import "./utils";
-// @import "./presets";
+@import "./portfolio";
