--- a/sass/3_desktop/_footer.scss
+++ b/sass/3_desktop/_footer.scss
@@ -3,9 +3,6 @@
 @media screen and (min-width: $dt-res) {
   .footer {
     padding: 60px 0;
-    // width: 1600px;
-    width: 1200px;
-
     background-color: #2f303a;
   }
   .footer .container {
@@ -47,6 +44,8 @@
     margin-left: 70px;
     margin-right: 0;
     margin-top: 12px;
+
+    text-align: left;
   }
   .join-header,
   .subscribe-email label {
@@ -55,6 +54,7 @@
     line-height: calc(16 / 14);
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    text-align: left;
     color: #fff;
 
     // outline: 1px solid red;
@@ -65,7 +65,7 @@
   .join-box .soc-links {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
+    // margin-top: 20px;
     fill: #afb1b8;
   }
   /* ------------------- ПОДПИСКА --------------------*/
@@ -73,46 +73,34 @@
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-
-    // flex-direction: column;
+    
     width: 570px;
     height: 86px;
     margin-left: 93px;
-    margin-top: 12px;
-
-    // align-items: flex-end;
-    
-
+    margin-top: 12px;  
     // outline: 1px solid white;
   }
   .subscribe-email label {
-    // margin-bottom: 20px;
-    // outline: 1px solid white;
     width: 358px;
+    // outline: 1px solid white;
   }
   .subscribe-input {
     width: 358px;
-    // display: block;
-    
-    margin-top: 20px;
-    
-    // width: 358px;
-    
     height: 50px;
     padding-left: 16px;
+    margin-top: 20px;   
+    
     background-color: #2f303a;
-    border: none;
+    // border: none;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
 
-    line-height: calc(20 / 16);
+      line-height: calc(20 / 16);
     color: #fff;
   }
   .subscribe-email button {
     padding: 10px 29px;
-    // padding-top: 10px;
-    // padding-bottom: 10px;
     color: #fff;
     background-color: var(--accent-color);
   }
