--- a/sass/0/_footer_m_t.scss
+++ b/sass/0/_footer_m_t.scss
@@ -2,23 +2,22 @@
 
 .footer address {
   margin-top: 20px;
+  // outline: 1px solid tomato;
 }
-.address-item .email,
-.address-item .phone {
-  display: block;
 
+.address-item{
   font-weight: normal;
   font-size: 14px;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
-
   color: rgba(255, 255, 255, 0.6);
-  // margin-top: 9px;
-  margin-top: 8px;
+   // outline: 1px solid white;
+}
+.map-address{
+  color: #fff;
 }
 .join-box {
   margin-top: 60px;
-  margin-right: 89px-15px;
   text-align: center;
 }
 .join-header,
@@ -29,6 +28,9 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #fff;
+}
+.soc-links {
+  padding-top: 20px;
 }
 .soc-list-link {
   background-color: rgba(255, 255, 255, 0.1);
@@ -47,28 +49,28 @@
   // outline: 1px solid white;
 }
 .subscribe-email input {
-    display: block;
-    margin-top: 20px;
-    width: 100%;
-    height: 50px;
-    padding-left: 16px;
-    background-color: #2f303a;
-    border: none;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-  
-    line-height: calc(20 / 16);
-    color: #fff;
-  }
-  .subscribe-email button {
-    margin: 20px auto 0 auto;
-    // padding: 29px;
-    // padding-top: 10px;
-    // padding-bottom: 10px;
-    color: #fff;
-    background-color: var(--accent-color);
-  }
-  .send {
-    margin-left: 10px;
-  }
+  display: block;
+  margin-top: 20px;
+  width: 100%;
+  height: 50px;
+  padding-left: 16px;
+  background-color: #2f303a;
+  border: none;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  line-height: calc(20 / 16);
+  color: #fff;
+}
+.subscribe-email button {
+  margin: 20px auto 0 auto;
+  // padding: 29px;
+  // padding-top: 10px;
+  // padding-bottom: 10px;
+  color: #fff;
+  background-color: var(--accent-color);
+}
+.send {
+  margin-left: 10px;
+}
