--- a/sass/0/recic/_backdrop_modal_m_t_.scss
+++ b/sass/0/recic/_backdrop_modal_m_t_.scss
@@ -84,18 +84,21 @@
 }
 
 .modal {
-  // padding: 20px;
-  padding: 40px;
   position: absolute;
+  top: 50%;
+  left: 50%;
+  // z-index: 100;
+  transform: translate(-50%, -50%) scale(1);
   max-width: 450px;
   width: 100%;
-  // height: 609px;
   left: 15px;
   top: 93px;
 
+  padding: 40px;
+
   background-color: #fff;
 
-  // transform: translate(-50%, -50%) scale(1);
+  
 
   // transition: transform 250ms var(--cubic) 250ms;
   // @media (min-width: 600px) {
