--- a/sass/1_mobile/_1hero.scss
+++ b/sass/1_mobile/_1hero.scss
@@ -14,7 +14,12 @@
 //   }
 // }
 
-@media screen and (max-width: 767px) and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  // .zero{
+  //   display: none;
+  //   height: 60px;
+  //   background-color: tomato;
+  // }
   .hero {
     // width: 1600px;
     height: 400px;
@@ -52,6 +57,5 @@
     margin: 30px auto 0 auto;
     // background-color: var(--accent-color);
     background-color: red;
-
   }
 }
