--- a/sass/1_mobile/_backdrop_modal_.scss
+++ b/sass/1_mobile/_backdrop_modal_.scss
@@ -1,6 +1,4 @@
-//          Tablet BackDrop & Modal (from DT)
-
-//      Desktop BackDrop & Modal  $dt-res - 1200
+//       Mobile BackDrop
 
 @media screen and (max-width: 767px){
     .backdrop {
@@ -10,7 +8,7 @@
       width: 100%;
       height: 100%;
       background-color: rgba(0, 0, 0, 0.1);
-  
+    
       transition: all 500ms var(--cubic);
     }
     .backdrop.is-hidden {
@@ -24,22 +22,22 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      // z-index: 100;
+      z-index: 100;
       transform: translate(-50%, -50%) scale(1);
-      // width: 450px;
-        // min-height: 581px; 
-    //   height: 200px;
-  
+      width: 528px;
+      min-height: 581px;
+      height: 200px;
+    
       padding: 40px;
-  
+    
       background-color: #fff;
       box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
       border-radius: 4px;
-  
+    
       transition: transform 250ms var(--cubic) 250ms;
     }
-  
+    
     .close-btn {
       position: absolute;
       top: 8px;
@@ -51,12 +49,12 @@
       border-radius: 50%;
       cursor: pointer;
       /* display: flex;
-      justify-content: center;
-      align-items: center; */
-  
+        justify-content: center;
+        align-items: center; */
+    
       /* text-align: center; */
       /* vertical-align: center; */
-  
+    
       outline: none;
     }
     .is-hidden {
@@ -67,5 +65,5 @@
     .close-btn:hover {
       fill: var(--accent-color);
     }
-  }
-  
+    }
+
