--- a/sass/1_mobile/_bp_640.scss
+++ b/sass/1_mobile/_bp_640.scss
@@ -1,25 +1,21 @@
 //                      Mobi
 
-
-
-
-
-
 @import "./menu";
+
+
+
+
+
 
 @import "./0header";
 @import "./1hero";
-// @import "./2vertu";
-    // @import "./3directions"; отсутстует в этой вёрстке
-// @import "./4team";
-// @import "./5clients";
-// @import "./footer";
+@import "./2vertu";
+    // @import "./3directions"; //  отсутстует в этой вёрстке
+    // @import "./4team";       //  упразднён
+@import "./5clients";
+@import "./footer";
 
-// @import "./backdrop_modal";
-// @import "./form";
-// @import "./portfolio";
+// @import "./backdrop_modal";  //  упразднён
+// @import "./form";            //  упразднён
 
-// @import "./variables";
-// @import "./utils";
-// @import "./presets";
-// @import "./components";
+@import "./portfolio";
