--- a/sass/1_mobile/_portfolio.scss
+++ b/sass/1_mobile/_portfolio.scss
@@ -12,7 +12,7 @@
 
     justify-content: left;
     flex-wrap: wrap;
-    padding-bottom: 16px;
+    margin-bottom: calc(16px + 34px);
 
     & .button {
       padding: 6px 22px;
@@ -26,29 +26,26 @@
   .filter-item:not(:last-child) {
     margin-right: 8px;
   }
-  .portfolio-items {
-    padding-top: 34px;
-    display: flex;
-    flex-wrap: wrap;
-  }
+  // .portfolio-items {
+  //   padding-top: 34px;
+  //   display: flex;
+  //   flex-wrap: wrap;
+  // }
   .portfolio-item {
     // width: 370px;
     width: 100%;
     border: 1px solid #eeeeee;
 
-    // &:not(:nth-child(3n)) {
-      // margin-right: 30px;
-    // }
-
-    // &:not(:nth-last-child(-n + 3)) {
-      // margin-bottom: 30px;
-    // }
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
 
     &:focus-within,
     &:hover {
       box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     }
+    outline: 1px solid violet;
   }
   .portfolio-link {
     text-decoration: none;
@@ -73,28 +70,32 @@
     // letter-spacing: 0.03em;
     color: var(--primary-text-color);
   }
-  // .discription {
-    // padding: 20px 24px;
-  // }
-  // .card-thumb {
-    // height: 294px;
-    // overflow: hidden;
-  // }
+  .discription {
+    padding: 20px 24px;
+  }
+  .card-thumb {
+    height: 294px;
+    overflow: hidden;
+  }
   .slide {
-    // top: 0;
-    // left: 0;
-    // width: 100%;
-    // height: 100%;
-    // padding: 63px 24px;
-    // background-color: rgba(33, 150, 243, 0.9);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 77px 24px;
+    background-color: rgba(33, 150, 243, 0.9);
 
-    // font-style: normal;
-    // font-weight: normal;
-    // font-size: 18px;
-    // line-height: calc(28 / 18);
-    // letter-spacing: 0.03em;
-    // color: #ffffff;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: calc(28 / 18);
+    letter-spacing: 0.03em;
+    color: #ffffff;
 
     transition: transform var(--t-cubic);
   }
 }
+
+
+
+
