--- a/sass/2_tablet/_5clients.scss
+++ b/sass/2_tablet/_5clients.scss
@@ -1,4 +1,7 @@
 //          Tablet Clients
-.clients-item {
-  width: calc((100% - 2 * 3 * var(--mci)) / 3);
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients-item {
+    margin: var(--mci);
+    width: calc((100% - 2 * 3 * var(--mci)) / 3);
+  }
 }
