--- a/sass/2_tablet/_bp_768.scss
+++ b/sass/2_tablet/_bp_768.scss
@@ -2,23 +2,17 @@
 
 @import "./menu";
 
-    //  был однажды упразднён
-@import "./0header"; 
-                        
+//  был однажды упразднён
+
+@import "./0header";
 @import "./1hero";
-// @import "./2vertu"; 
-    // @import "./3directions";
-// @import "./4team";
-// @import "./5clients";
-// @import "./footer";
+@import "./2vertu";
+// @import "./3directions";     //  отсутстует в этой вёрстке
+@import "./4team";
+@import "./5clients";
+@import "./footer";
 
+// @import "./backdrop_modal";  //  упразднён
+// @import "./form";            //  упразднён
 
-// @import "./backdrop_modal";
-// @import "./form";
-// @import "./portfolio";
-
-
-// @import "./variables"; 
-// @import "./utils";
-// @import "./presets";
-// @import "./components";
+@import "./portfolio";
