--- a/sass/2_tablet/_footer.scss
+++ b/sass/2_tablet/_footer.scss
@@ -1,32 +1,44 @@
 //          Tablet Footer
 
-.footer {
-  width: 768px;
-}
-.footer-tablet {
-  display: flex;
-  justify-content: space-between;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer {
+    padding: 60px 0;
+    background-color: #2f303a;
+  }
+  .footer-tablet {
+    display: flex;
+    justify-content: space-between;
+    // outline: 1px solid white;
+  }
+  .footer-logo {
+    margin-left: 100px; 
+  }
+  .footer address {
+    // margin-left: calc(76px - 15px);
+    display: flex;
+  }
+  .map-address {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #ffffff;
 
-  // outline: 1px solid white;
+    transition: color var(--t-cubic);
+  }
+  .footer .part2 {
+    color: #ffffff;
+  }
+  .address-item {
+    text-align: center;
+    margin-left: 61px;
+  }
+  .join-box {
+    margin-top: 5px;
+    margin-right: calc(89px - 15px);
+  }
+  .subscribe-email {
+    margin-left: calc(166px - 15px);
+    margin-right: calc(152px - 15px);
+  }
 }
-.footer-logo {
-  margin-left: 100px;
-}
-.footer address {
-  // margin-left: calc(76px - 15px);
-
-  display: flex;
-}
-.address-item {
-  text-align: center;
-  margin-left: 61px;
-}
-.join-box {
-  margin-top: 5px;
-  // margin-right: calc(89px - 15px);
-}
-.subscribe-email {
-  
-      margin-left: calc(166px - 15px);
-      margin-right: calc(152px - 15px);
-    }
