--- a/sass/2_tablet/_menu.scss
+++ b/sass/2_tablet/_menu.scss
@@ -32,13 +32,52 @@
     color: var(--title-text-color);
 
     margin-top: 32px;
+}
+// --------------------------
+.site-nav .link {
+  padding: 31px 0;
+  position: relative;
 
-    // outline: 1px solid black;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: calc(16/14);
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  transition: color var(--t-cubic);
+}
+
+.link.is-current {
+  color: var(--accent-color);
+}
+
+.link.is-current::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+}
+.site-nav .link:hover,
+  .site-nav .link:focus,
+  .email:hover,
+  .email:focus,
+  .phone:hover,
+  .phone:focus,
+  .map-address:hover,
+  .map-address:focus {
+    color: var(--accent-color);
   }
-  // .site-page{
-  //   // display: inline;
-  // outline: 1px solid black;
-  // }
+  .email:hover .envelope,
+  .phone:hover .smartphone {
+    fill: var(--accent-color);
+  }
+//---------------------------
+  
   .contacts a {
     display: flex;
     // font-family: Roboto;
