--- a/sass/2_tablet/_portfolio.scss
+++ b/sass/2_tablet/_portfolio.scss
@@ -1,9 +1,9 @@
-//      Desktop Portfolio       $dt-res - 1200?
+//      Tablet Portfolio       
 
-@media screen and (min-width:$dt-res){
+@media screen and (min-width: 768px) and (max-width: 1199px) {
 .portfolio-hero .container {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .filter-buttons {
   display: flex;
@@ -25,24 +25,20 @@
   // padding-top: 34px;
   display: flex;
   flex-wrap: wrap;
+  margin: -15px;
 }
 .portfolio-item {
-  width: 370px;
+  // width: 354px;
+  width: calc((100% - 2 * 2 * 15px) / 2);
   border: 1px solid #eeeeee;
-
-  &:not(:nth-child(3n)) {
-      margin-right: 30px;
-    }
-
-  &:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 30px;
-  }
-
+  margin: 15px;
+  
   &:focus-within,
   &:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+  outline: 1px solid violet;
 }
 .portfolio-link {
   text-decoration: none;
