--- a/sass/3_desktop/_3directions.scss
+++ b/sass/3_desktop/_3directions.scss
@@ -1,31 +1,33 @@
-@media screen and (min-width:$dt-res){
-.direction {
-  margin: 0 0 94px;
-}
-.direction-list {
-  margin-top: 50px;
-  display: flex;
-  justify-content: space-between;
-}
-.thumb {
-  position: relative;
-  height: 294px;
-  background-color: #fff;
-}
-.moir-content {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background: rgba(47, 48, 58, 0.8);
-  padding: 27px;
+@media screen and (min-width: $dt-res) {
+  .direction {
+    display: block;
+    margin: 0 0 94px;
+  }
+  .direction-list {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .thumb {
+    position: relative;
+    height: 294px;
+    background-color: #fff;
+  }
+  .moir-content {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(47, 48, 58, 0.8);
+    padding: 27px;
 
-  font-weight: bold;
-  font-size: 14px;
-  line-height: calc(16 / 14);
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: calc(16 / 14);
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 
-  color: #ffffff;
-}}
+    color: #ffffff;
+  }
+}
