Попытка отобразить изо.ч-з GH pages

--- a/sass/3_desktop/_1hero.scss
+++ b/sass/3_desktop/_1hero.scss
@@ -13,14 +13,14 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/desktop/img@2x.jpg);
+        url(../images/desktop/img@2x.jpg);
     }
 
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../images/desktop/img.jpg);
+    url(../images/desktop/img.jpg);
   background-repeat: no-repeat;
   // background-size: cover;
 
