--- a/css/main.css
+++ b/css/main.css
@@ -934,7 +934,7 @@ address {
   }
   .hero .button {
     margin: 30px auto 0 auto;
-    color: #fffx;
+    color: #fff;
     background-color: var(--accent-color);
   }
 }
@@ -1207,7 +1207,7 @@ address {
   .hero {
     padding: 200px 0;
     margin: 0 auto 0 auto;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/desktop/img.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/img.jpg);
     background-repeat: no-repeat;
     background-size: 1600px 600px;
     background-position: center top;
@@ -1216,7 +1216,7 @@ address {
 
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/desktop/img@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/img@2x.jpg);
   }
 }
 
