--- a/sass/2_tablet/_1hero.scss
+++ b/sass/2_tablet/_1hero.scss
@@ -43,7 +43,7 @@
   .hero .button {
     // margin-top: 30px;
     margin: 30px auto 0 auto;
-    color: #fffx;
+    color: #fff;
     background-color: var(--accent-color);
     // background-color: red;
   }
