--- a/sass/1_mobile/_1hero.scss
+++ b/sass/1_mobile/_1hero.scss
@@ -31,14 +31,14 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/mobile/img@2x.jpg);
+        url(../images/mobile/img@2x.jpg);
     }
 
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/mobile/img.jpg);
+      url(../images/mobile/img.jpg);
 
     background-size: 480px 400px;
     background-repeat: no-repeat;
