--- a/sass/2_tablet/_1hero.scss
+++ b/sass/2_tablet/_1hero.scss
@@ -11,14 +11,14 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/tablet/img@2x.jpg);
+        url(../images/tablet/img@2x.jpg);
     }
 
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/tablet/img.jpg);
+      url(../images/tablet/img.jpg);
 
     background-size: 768px 400px;
     background-repeat: no-repeat;
